--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <aside>
         <h1>RUMI'S HOUSE OF OURS</h1>
         <h2>by Jupiterbyrd</h2>
-        <div id="parameterMenu">
+        <!--<div id="parameterMenu">
             <textarea autocomplete="on" autofocus="on" id="prompt">What's on your mind?</textarea>  
-        </div>
+        </div>-->
         <button id="drawButton">Draw House</button>
        
     </aside>
